--- a/src/app/containers/scoreboard/scoreboard.component.scss
+++ b/src/app/containers/scoreboard/scoreboard.component.scss
@@ -70,17 +70,29 @@ mat-card-content {
 
 /* shrink internal spacing on small screens */
 @media (max-width: 600px) {
+  mat-card {
+    margin-top: -20px !important;
+    overflow: hidden;
+  }
+
   .scoreboard {
     padding: 0 5px;
     gap: 4px;
+    overflow: hidden;
+
+    .scoreboard__score {
+      overflow: hidden;
+    }
 
     .scoreboard__badge {
-      font-size: 18px;
-      margin: 0 4px;
+      font-size: 16px;
+      margin: 0 2px;
     }
 
     .scoreboard__timer {
       margin-right: 0;
+      margin-top: 5px;
+      overflow: hidden;
     }
   }
 }
